--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -18,8 +18,8 @@ a.navbar-brand {
 
 .title {
   background-color: $gray-600;
-  margin-left: -15px;
-  margin-right: -15px;
+  //margin-left: -15px;
+  //margin-right: -15px;
   padding-top: 40px;
   padding-bottom: 40px;
 
